fixed line wrap

--- a/src/app/components/List/List.module.scss
+++ b/src/app/components/List/List.module.scss
@@ -84,7 +84,7 @@ $list-header-width: 56px;
 		min-height: 48px;
 
 		.item-content__primary {
-			white-space: pre;
+			white-space: pre-wrap;
 			padding: 0.8rem 0;
 		}
 	}
